# axiom

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  METRICS.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  large-tlc.yml  nightly.yml  pages.yml
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: axiom_verify.rs  causal_broadcast.rs  gcounter.rs  hlc.rs  lib.rs  orset.rs  pncounter.rs  rga.rs  vector_clock.rs
crates/axiom-core/tests/: trace_replay.rs
crates/axiom-core/tests/traces/: gcounter.json  orset.json  rga.json
crates/axiom-py/: Cargo.toml  README.md  pyproject.toml
crates/axiom-py/src/: lib.rs
crates/axiom-py/tests/: test_axiom.py
docs/: README.md  book.toml
docs/src/: SUMMARY.md  acoustic-auth.md  causal-broadcast.md  crdts.md  gcounter.md  introduction.md  orset.md  pncounter.md  refinement.md  rga.md  tla.md  verification.md
evaluation/: large_run.md  large_run.sh
evaluation/configs/: GCounter.large.cfg  ORSet.large.cfg  PNCounter.large.cfg
launch/: show-hn.md
paper/: README.md  axiom.md
scripts/: check_metrics.py
tla/: AcousticAuth.cfg  AcousticAuth.tla  AcousticAuthProofs.tla  Counter.cfg  Counter.tla  GCounter.cfg  GCounter.tla  GCounterBase.tla  GCounterProofs.tla  ORSet.cfg  ORSet.tla  PNCounter.cfg  PNCounter.tla  README.md  RGA.cfg  RGA.tla  SETUP.md
tla/traces/: GCounterTrace.cfg  GCounterTrace.tla  ORSetTrace.cfg  ORSetTrace.tla  README.md  RGATrace.cfg  RGATrace.tla
