[package]
name = "axiom-core"
description = "Formally specified CRDTs with explicit refinement mappings to TLA+ specs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
proptest = "1.11.0"
