[package]
name = "axiom-py"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for the Axiom CRDT runtime."
publish = false

# Detached from the root workspace: a PyO3 extension-module crate links
# differently and is built only via maturin, so we keep it out of the root
# `cargo build --workspace` / CI rust job.
[workspace]

[lib]
name = "axiom"
crate-type = ["cdylib"]

[dependencies]
# extension-module is enabled by maturin (see pyproject.toml), not here, so plain
# `cargo check`/clippy on this crate does not try to link libpython.
pyo3 = { version = "0.29", features = ["abi3-py39"] }
rmp-serde = "1.3.1"
axiom-core = { path = "../axiom-core" }
